cmake_minimum_required(VERSION 3.13)
if (APPLE)
    project(dusk LANGUAGES C CXX OBJC)
else ()
    project(dusk LANGUAGES C CXX)
endif ()

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 20)

if (CMAKE_SYSTEM_NAME STREQUAL Linux)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unknown-pragmas -Wno-unused-variable -Wno-unused-parameter -fPIC")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-register -fPIC")
    set(CMAKE_PREFIX_PATH /usr)
    set(CMAKE_LIBRARY_ARCHITECTURE x86_64-linux-gnu)
    set(CMAKE_LIBRARY_PATH "/usr/lib64" "/usr/lib/x86_64-linux-gnu" CACHE PATH "")
    set(CMAKE_FIND_LIBRARY_CUSTOM_LIB_SUFFIX 64)
    set(CMAKE_INSTALL_RPATH "$ORIGIN")
    set(CMAKE_BUILD_RPATH "$ORIGIN")
elseif (APPLE)
    add_compile_options(-Wno-declaration-after-statement)
    set(CMAKE_INSTALL_RPATH "$ORIGIN")
    set(CMAKE_BUILD_RPATH "$ORIGIN")
elseif (MSVC)
    add_compile_options(/bigobj)
endif ()

add_subdirectory(extern/aurora EXCLUDE_FROM_ALL)

set(DOLZEL_FILES
    src/m_Do/m_Do_main.cpp
    src/m_Do/m_Do_printf.cpp
    src/m_Do/m_Do_audio.cpp
    src/m_Do/m_Do_controller_pad.cpp
    src/m_Do/m_Re_controller_pad.cpp
    src/m_Do/m_Do_graphic.cpp
    src/m_Do/m_Do_machine.cpp
    src/m_Do/m_Do_mtx.cpp
    src/m_Do/m_Do_ext.cpp
    src/m_Do/m_Do_lib.cpp
    src/m_Do/m_Do_Reset.cpp
    src/m_Do/m_Do_dvd_thread.cpp
    src/m_Do/m_Do_DVDError.cpp
    src/m_Do/m_Do_MemCard.cpp
    src/m_Do/m_Do_MemCardRWmng.cpp
    src/m_Do/m_Do_machine_exception.cpp
    src/m_Do/m_Do_hostIO.cpp
    src/c/c_damagereaction.cpp
    src/c/c_dylink.cpp
    src/f_ap/f_ap_game.cpp
    src/f_op/f_op_actor.cpp
    src/f_op/f_op_actor_iter.cpp
    src/f_op/f_op_actor_tag.cpp
    src/f_op/f_op_camera.cpp
    src/f_op/f_op_actor_mng.cpp
    src/f_op/f_op_camera_mng.cpp
    src/f_op/f_op_overlap.cpp
    src/f_op/f_op_overlap_mng.cpp
    src/f_op/f_op_overlap_req.cpp
    src/f_op/f_op_scene.cpp
    src/f_op/f_op_scene_iter.cpp
    src/f_op/f_op_scene_mng.cpp
    src/f_op/f_op_scene_req.cpp
    src/f_op/f_op_scene_tag.cpp
    src/f_op/f_op_view.cpp
    src/f_op/f_op_kankyo.cpp
    src/f_op/f_op_msg.cpp
    src/f_op/f_op_kankyo_mng.cpp
    src/f_op/f_op_msg_mng.cpp
    src/f_op/f_op_draw_iter.cpp
    src/f_op/f_op_draw_tag.cpp
    src/f_op/f_op_scene_pause.cpp
    src/f_pc/f_pc_base.cpp
    src/f_pc/f_pc_create_iter.cpp
    src/f_pc/f_pc_create_req.cpp
    src/f_pc/f_pc_create_tag.cpp
    src/f_pc/f_pc_creator.cpp
    src/f_pc/f_pc_delete_tag.cpp
    src/f_pc/f_pc_deletor.cpp
    src/f_pc/f_pc_draw_priority.cpp
    src/f_pc/f_pc_executor.cpp
    src/f_pc/f_pc_layer.cpp
    src/f_pc/f_pc_leaf.cpp
    src/f_pc/f_pc_layer_iter.cpp
    src/f_pc/f_pc_layer_tag.cpp
    src/f_pc/f_pc_line.cpp
    src/f_pc/f_pc_load.cpp
    src/f_pc/f_pc_manager.cpp
    src/f_pc/f_pc_method.cpp
    src/f_pc/f_pc_node.cpp
    src/f_pc/f_pc_node_req.cpp
    src/f_pc/f_pc_priority.cpp
    src/f_pc/f_pc_profile.cpp
    src/f_pc/f_pc_searcher.cpp
    src/f_pc/f_pc_line_tag.cpp
    src/f_pc/f_pc_line_iter.cpp
    src/f_pc/f_pc_method_iter.cpp
    src/f_pc/f_pc_method_tag.cpp
    src/f_pc/f_pc_pause.cpp
    src/f_pc/f_pc_draw.cpp
    src/f_pc/f_pc_fstcreate_req.cpp
    src/f_pc/f_pc_stdcreate_req.cpp
    src/f_pc/f_pc_debug_sv.cpp
    src/d/d_stage.cpp
    src/d/d_map.cpp
    src/d/d_com_inf_game.cpp
    src/d/d_com_static.cpp
    src/d/d_com_inf_actor.cpp
    src/d/d_bomb.cpp
    src/d/d_lib.cpp
    src/d/d_save.cpp
    src/d/d_save_init.cpp
    src/d/d_jnt_col.cpp
    src/d/d_a_obj.cpp
    src/d/d_a_itembase_static.cpp
    src/d/d_a_item_static.cpp
    src/d/d_a_shop_item_static.cpp
    src/d/d_a_horse_static.cpp
    src/d/d_demo.cpp
    src/d/d_door_param2.cpp
    src/d/d_resorce.cpp
    src/d/d_map_path.cpp
    src/d/d_map_path_fmap.cpp
    src/d/d_map_path_dmap.cpp
    src/d/d_event.cpp
    src/d/d_event_data.cpp
    src/d/d_event_manager.cpp
    src/d/d_event_lib.cpp
    src/d/d_event_debug.cpp
    src/d/d_simple_model.cpp
    src/d/d_particle.cpp
    src/d/d_particle_name.cpp
    src/d/d_particle_copoly.cpp
    src/d/d_path.cpp
    src/d/d_drawlist.cpp
    src/d/d_kankyo_data.cpp
    src/d/d_kankyo_wether.cpp
    src/d/d_kankyo_rain.cpp
    src/d/d_kankyo_debug.cpp
    src/d/d_vibration.cpp
    src/d/d_vib_pattern.cpp
    src/d/d_attention.cpp
    src/d/d_bg_parts.cpp
    src/d/d_bg_pc.cpp
    src/d/d_att_dist.cpp
    src/d/d_bg_plc.cpp
    src/d/d_bg_s.cpp
    src/d/d_bg_s_acch.cpp
    src/d/d_bg_s_chk.cpp
    src/d/d_bg_s_gnd_chk.cpp
    src/d/d_bg_s_grp_pass_chk.cpp
    src/d/d_bg_s_lin_chk.cpp
    src/d/d_bg_s_movebg_actor.cpp
    src/d/d_bg_s_sph_chk.cpp
    src/d/d_bg_s_spl_grp_chk.cpp
    src/d/d_bg_s_poly_pass_chk.cpp
    src/d/d_bg_s_roof_chk.cpp
    src/d/d_bg_s_wtr_chk.cpp
    src/d/d_bg_w.cpp
    src/d/d_bg_w_base.cpp
    src/d/d_bg_w_kcol.cpp
    src/d/d_bg_w_sv.cpp
    src/d/d_cc_d.cpp
    src/d/d_cc_mass_s.cpp
    src/d/d_cc_s.cpp
    src/d/d_cc_uty.cpp
    src/d/d_cam_param.cpp
    src/d/d_ev_camera.cpp
    src/d/d_spline_path.cpp
    src/d/d_item_data.cpp
    src/d/d_item.cpp
    src/d/d_tresure.cpp
    src/d/d_model.cpp
    src/d/d_eye_hl.cpp
    src/d/d_error_msg.cpp
    src/d/d_debug_viewer.cpp
    src/d/d_debug_camera.cpp
    src/d/actor/d_a_alink.cpp
    src/d/actor/d_a_itembase.cpp
    src/d/actor/d_a_no_chg_room.cpp
    src/d/actor/d_a_npc.cpp
    src/d/actor/d_a_npc_cd.cpp
    src/d/actor/d_a_npc_cd2.cpp
    src/d/actor/d_a_obj_item.cpp
    src/d/d_insect.cpp
    src/d/actor/d_a_obj_ss_base.cpp
    src/d/actor/d_a_player.cpp
    src/d/d_camera.cpp
    src/d/d_envse.cpp
    src/d/d_file_select.cpp
    src/d/d_file_sel_warning.cpp
    src/d/d_file_sel_info.cpp
    src/d/d_bright_check.cpp
    src/d/d_scope.cpp
    src/d/d_select_cursor.cpp
    src/d/d_select_icon.cpp
    src/d/d_shop_camera.cpp
    src/d/d_shop_item_ctrl.cpp
    src/d/d_shop_system.cpp
    src/d/d_gameover.cpp
    src/d/d_kankyo.cpp
    src/d/d_kyeff.cpp
    src/d/d_kyeff2.cpp
    src/d/d_ky_thunder.cpp
    src/d/d_kantera_icon_meter.cpp
    src/d/d_menu_calibration.cpp
    src/d/d_menu_collect.cpp
    src/d/d_menu_dmap.cpp
    src/d/d_menu_dmap_map.cpp
    src/d/d_menu_map_common.cpp
    src/d/d_menu_fishing.cpp
    src/d/d_menu_fmap.cpp
    src/d/d_menu_fmap_map.cpp
    src/d/d_menu_fmap2D.cpp
    src/d/d_menu_insect.cpp
    src/d/d_menu_item_explain.cpp
    src/d/d_menu_letter.cpp
    src/d/d_menu_option.cpp
    src/d/d_menu_ring.cpp
    src/d/d_menu_save.cpp
    src/d/d_menu_skill.cpp
    src/d/d_menu_window_HIO.cpp
    src/d/d_menu_window.cpp
    src/d/d_meter_HIO.cpp
    src/d/d_meter_button.cpp
    src/d/d_meter_haihai.cpp
    src/d/d_meter_hakusha.cpp
    src/d/d_meter_map.cpp
    src/d/d_meter_string.cpp
    src/d/d_meter2_draw.cpp
    src/d/d_meter2_info.cpp
    src/d/d_meter2.cpp
    src/d/d_msg_out_font.cpp
    src/d/d_msg_class.cpp
    src/d/d_msg_object.cpp
    src/d/d_msg_unit.cpp
    src/d/d_msg_scrn_3select.cpp
    src/d/d_msg_scrn_arrow.cpp
    src/d/d_msg_scrn_base.cpp
    src/d/d_msg_scrn_boss.cpp
    src/d/d_msg_scrn_explain.cpp
    src/d/d_msg_scrn_item.cpp
    src/d/d_msg_scrn_howl.cpp
    src/d/d_msg_scrn_jimaku.cpp
    src/d/d_msg_scrn_kanban.cpp
    src/d/d_msg_scrn_light.cpp
    src/d/d_msg_scrn_place.cpp
    src/d/d_msg_scrn_staff.cpp
    src/d/d_msg_scrn_talk.cpp
    src/d/d_msg_scrn_tree.cpp
    src/d/d_msg_string_base.cpp
    src/d/d_msg_string.cpp
    src/d/d_msg_flow.cpp
    src/d/d_name.cpp
    src/d/d_npc_lib.cpp
    src/d/d_ovlp_fade.cpp
    src/d/d_ovlp_fade2.cpp
    src/d/d_ovlp_fade3.cpp
    src/d/d_pane_class.cpp
    src/d/d_pane_class_alpha.cpp
    src/d/d_pane_class_ex.cpp
    src/d/d_s_logo.cpp
    src/d/d_s_menu.cpp
    src/d/d_s_name.cpp
    src/d/d_s_play.cpp
    src/d/d_s_room.cpp
    src/d/d_s_title.cpp
    src/d/d_save_HIO.cpp
    src/d/d_timer.cpp
    src/d/d_k_wmark.cpp
    src/d/d_k_wpillar.cpp
    src/DynamicLink.cpp
    src/CaptureScreen.cpp
    )

set(Z2AUDIOLIB_FILES
    src/Z2AudioLib/Z2Calc.cpp
    src/Z2AudioLib/Z2AudioArcLoader.cpp
    src/Z2AudioLib/Z2Param.cpp
    src/Z2AudioLib/Z2SoundMgr.cpp
    src/Z2AudioLib/Z2SoundStarter.cpp
    src/Z2AudioLib/Z2SoundHandles.cpp
    src/Z2AudioLib/Z2SeMgr.cpp
    src/Z2AudioLib/Z2SeqMgr.cpp
    src/Z2AudioLib/Z2StatusMgr.cpp
    src/Z2AudioLib/Z2SceneMgr.cpp
    src/Z2AudioLib/Z2FxLineMgr.cpp
    src/Z2AudioLib/Z2SoundInfo.cpp
    src/Z2AudioLib/Z2Audience.cpp
    src/Z2AudioLib/Z2SoundObject.cpp
    src/Z2AudioLib/Z2SoundObjMgr.cpp
    src/Z2AudioLib/Z2Creature.cpp
    src/Z2AudioLib/Z2LinkMgr.cpp
    src/Z2AudioLib/Z2EnvSeMgr.cpp
    src/Z2AudioLib/Z2WolfHowlMgr.cpp
    src/Z2AudioLib/Z2SpeechMgr2.cpp
    src/Z2AudioLib/Z2AudioMgr.cpp
    )

set(SSYSTEM_FILES
    src/SSystem/SComponent/c_malloc.cpp
    src/SSystem/SComponent/c_API.cpp
    src/SSystem/SComponent/c_API_controller_pad.cpp
    src/SSystem/SComponent/c_API_graphic.cpp
    src/SSystem/SComponent/c_cc_d.cpp
    src/SSystem/SComponent/c_cc_s.cpp
    src/SSystem/SComponent/c_counter.cpp
    src/SSystem/SComponent/c_list.cpp
    src/SSystem/SComponent/c_list_iter.cpp
    src/SSystem/SComponent/c_node.cpp
    src/SSystem/SComponent/c_node_iter.cpp
    src/SSystem/SComponent/c_tree.cpp
    src/SSystem/SComponent/c_tree_iter.cpp
    src/SSystem/SComponent/c_phase.cpp
    src/SSystem/SComponent/c_request.cpp
    src/SSystem/SComponent/c_tag.cpp
    src/SSystem/SComponent/c_tag_iter.cpp
    src/SSystem/SComponent/c_xyz.cpp
    src/SSystem/SComponent/c_sxyz.cpp
    src/SSystem/SComponent/c_math.cpp
    src/SSystem/SComponent/c_bg_s_chk.cpp
    src/SSystem/SComponent/c_bg_s_gnd_chk.cpp
    src/SSystem/SComponent/c_bg_s_lin_chk.cpp
    src/SSystem/SComponent/c_bg_s_shdw_draw.cpp
    src/SSystem/SComponent/c_bg_s_poly_info.cpp
    src/SSystem/SComponent/c_bg_w.cpp
    src/SSystem/SComponent/c_m2d.cpp
    src/SSystem/SComponent/c_m3d.cpp
    src/SSystem/SComponent/c_m3d_g_aab.cpp
    src/SSystem/SComponent/c_m3d_g_cir.cpp
    src/SSystem/SComponent/c_m3d_g_cps.cpp
    src/SSystem/SComponent/c_m3d_g_cyl.cpp
    src/SSystem/SComponent/c_m3d_g_lin.cpp
    src/SSystem/SComponent/c_m3d_g_pla.cpp
    src/SSystem/SComponent/c_m3d_g_sph.cpp
    src/SSystem/SComponent/c_m3d_g_tri.cpp
    src/SSystem/SComponent/c_m3d_g_vtx.cpp
    src/SSystem/SComponent/c_lib.cpp
    src/SSystem/SComponent/c_angle.cpp
    src/SSystem/SStandard/s_basic.cpp
    )

set(JSYSTEM_FILES
    src/JSystem/JFramework/JFWSystem.cpp
    src/JSystem/JFramework/JFWDisplay.cpp
    src/JSystem/J3DU/J3DUClipper.cpp
    src/JSystem/J3DU/J3DUDL.cpp
    src/JSystem/JParticle/JPAResourceManager.cpp
    src/JSystem/JParticle/JPAResource.cpp
    src/JSystem/JParticle/JPABaseShape.cpp
    src/JSystem/JParticle/JPAExtraShape.cpp
    src/JSystem/JParticle/JPAChildShape.cpp
    src/JSystem/JParticle/JPAExTexShape.cpp
    src/JSystem/JParticle/JPADynamicsBlock.cpp
    src/JSystem/JParticle/JPAFieldBlock.cpp
    src/JSystem/JParticle/JPAKeyBlock.cpp
    src/JSystem/JParticle/JPATexture.cpp
    src/JSystem/JParticle/JPAResourceLoader.cpp
    src/JSystem/JParticle/JPAEmitterManager.cpp
    src/JSystem/JParticle/JPAEmitter.cpp
    src/JSystem/JParticle/JPAParticle.cpp
    src/JSystem/JParticle/JPAMath.cpp
    src/JSystem/JStage/JSGActor.cpp
    src/JSystem/JStage/JSGAmbientLight.cpp
    src/JSystem/JStage/JSGCamera.cpp
    src/JSystem/JStage/JSGFog.cpp
    src/JSystem/JStage/JSGLight.cpp
    src/JSystem/JStage/JSGObject.cpp
    src/JSystem/JStage/JSGSystem.cpp
    src/JSystem/JStudio/JStudio/ctb.cpp
    src/JSystem/JStudio/JStudio/ctb-data.cpp
    src/JSystem/JStudio/JStudio/functionvalue.cpp
    src/JSystem/JStudio/JStudio/fvb.cpp
    src/JSystem/JStudio/JStudio/fvb-data.cpp
    src/JSystem/JStudio/JStudio/fvb-data-parse.cpp
    src/JSystem/JStudio/JStudio/jstudio-control.cpp
    src/JSystem/JStudio/JStudio/jstudio-data.cpp
    src/JSystem/JStudio/JStudio/jstudio-math.cpp
    src/JSystem/JStudio/JStudio/jstudio-object.cpp
    src/JSystem/JStudio/JStudio/object-id.cpp
    src/JSystem/JStudio/JStudio/stb.cpp
    src/JSystem/JStudio/JStudio/stb-data-parse.cpp
    src/JSystem/JStudio/JStudio/stb-data.cpp
    src/JSystem/JStudio/JStudio_JStage/control.cpp
    src/JSystem/JStudio/JStudio_JStage/object.cpp
    src/JSystem/JStudio/JStudio_JStage/object-actor.cpp
    src/JSystem/JStudio/JStudio_JStage/object-ambientlight.cpp
    src/JSystem/JStudio/JStudio_JStage/object-camera.cpp
    src/JSystem/JStudio/JStudio_JStage/object-fog.cpp
    src/JSystem/JStudio/JStudio_JStage/object-light.cpp
    src/JSystem/JStudio/JStudio_JAudio2/control.cpp
    src/JSystem/JStudio/JStudio_JAudio2/object-sound.cpp
    src/JSystem/JStudio/JStudio_JParticle/control.cpp
    src/JSystem/JStudio/JStudio_JParticle/object-particle.cpp
    src/JSystem/JAudio2/JASCalc.cpp
    src/JSystem/JAudio2/JASTaskThread.cpp
    src/JSystem/JAudio2/JASDvdThread.cpp
    src/JSystem/JAudio2/JASCallback.cpp
    src/JSystem/JAudio2/JASHeapCtrl.cpp
    src/JSystem/JAudio2/JASResArcLoader.cpp
    src/JSystem/JAudio2/JASProbe.cpp
    src/JSystem/JAudio2/JASReport.cpp
    src/JSystem/JAudio2/JASCmdStack.cpp
    src/JSystem/JAudio2/JASTrack.cpp
    src/JSystem/JAudio2/JASTrackPort.cpp
    src/JSystem/JAudio2/JASRegisterParam.cpp
    src/JSystem/JAudio2/JASSeqCtrl.cpp
    src/JSystem/JAudio2/JASSeqParser.cpp
    src/JSystem/JAudio2/JASSeqReader.cpp
    src/JSystem/JAudio2/JASAramStream.cpp
    src/JSystem/JAudio2/JASBank.cpp
    src/JSystem/JAudio2/JASBasicBank.cpp
    src/JSystem/JAudio2/JASVoiceBank.cpp
    src/JSystem/JAudio2/JASBasicInst.cpp
    src/JSystem/JAudio2/JASDrumSet.cpp
    src/JSystem/JAudio2/JASBasicWaveBank.cpp
    src/JSystem/JAudio2/JASSimpleWaveBank.cpp
    src/JSystem/JAudio2/JASWSParser.cpp
    src/JSystem/JAudio2/JASBNKParser.cpp
    src/JSystem/JAudio2/JASWaveArcLoader.cpp
    src/JSystem/JAudio2/JASChannel.cpp
    src/JSystem/JAudio2/JASLfo.cpp
    src/JSystem/JAudio2/JASOscillator.cpp
    src/JSystem/JAudio2/JASAiCtrl.cpp
    src/JSystem/JAudio2/JASAudioThread.cpp
    src/JSystem/JAudio2/JASAudioReseter.cpp
    src/JSystem/JAudio2/JASDSPChannel.cpp
    src/JSystem/JAudio2/JASDSPInterface.cpp
    src/JSystem/JAudio2/JASDriverIF.cpp
    src/JSystem/JAudio2/JASSoundParams.cpp
    src/JSystem/JAudio2/dspproc.cpp
    src/JSystem/JAudio2/dsptask.cpp
    src/JSystem/JAudio2/osdsp.cpp
    src/JSystem/JAudio2/osdsp_task.cpp
    src/JSystem/JAudio2/JAIAudible.cpp
    src/JSystem/JAudio2/JAIAudience.cpp
    src/JSystem/JAudio2/JAISe.cpp
    src/JSystem/JAudio2/JAISeMgr.cpp
    src/JSystem/JAudio2/JAISeq.cpp
    src/JSystem/JAudio2/JAISeqDataMgr.cpp
    src/JSystem/JAudio2/JAISeqMgr.cpp
    src/JSystem/JAudio2/JAISound.cpp
    src/JSystem/JAudio2/JAISoundChild.cpp
    src/JSystem/JAudio2/JAISoundHandles.cpp
    src/JSystem/JAudio2/JAISoundInfo.cpp
    src/JSystem/JAudio2/JAISoundParams.cpp
    src/JSystem/JAudio2/JAISoundStarter.cpp
    src/JSystem/JAudio2/JAIStream.cpp
    src/JSystem/JAudio2/JAIStreamDataMgr.cpp
    src/JSystem/JAudio2/JAIStreamMgr.cpp
    src/JSystem/JAudio2/JAUAudioArcInterpreter.cpp
    src/JSystem/JAudio2/JAUAudioArcLoader.cpp
    src/JSystem/JAudio2/JAUAudioMgr.cpp
    src/JSystem/JAudio2/JAUBankTable.cpp
    src/JSystem/JAudio2/JAUClusterSound.cpp
    src/JSystem/JAudio2/JAUInitializer.cpp
    src/JSystem/JAudio2/JAUSectionHeap.cpp
    src/JSystem/JAudio2/JAUSeqCollection.cpp
    src/JSystem/JAudio2/JAUSeqDataBlockMgr.cpp
    src/JSystem/JAudio2/JAUSoundAnimator.cpp
    src/JSystem/JAudio2/JAUSoundTable.cpp
    src/JSystem/JAudio2/JAUStreamFileTable.cpp
    src/JSystem/JMessage/control.cpp
    src/JSystem/JMessage/data.cpp
    src/JSystem/JMessage/processor.cpp
    src/JSystem/JMessage/resource.cpp
    src/JSystem/JMessage/locale.cpp
    src/JSystem/JKernel/JKRHeap.cpp
    src/JSystem/JKernel/JKRExpHeap.cpp
    src/JSystem/JKernel/JKRSolidHeap.cpp
    src/JSystem/JKernel/JKRAssertHeap.cpp
    src/JSystem/JKernel/JKRDisposer.cpp
    src/JSystem/JKernel/JKRThread.cpp
    src/JSystem/JKernel/JKRAram.cpp
    src/JSystem/JKernel/JKRAramHeap.cpp
    src/JSystem/JKernel/JKRAramBlock.cpp
    src/JSystem/JKernel/JKRAramPiece.cpp
    src/JSystem/JKernel/JKRAramStream.cpp
    src/JSystem/JKernel/JKRFileLoader.cpp
    src/JSystem/JKernel/JKRFileFinder.cpp
    src/JSystem/JKernel/JKRFileCache.cpp
    src/JSystem/JKernel/JKRArchivePub.cpp
    src/JSystem/JKernel/JKRArchivePri.cpp
    src/JSystem/JKernel/JKRMemArchive.cpp
    src/JSystem/JKernel/JKRAramArchive.cpp
    src/JSystem/JKernel/JKRDvdArchive.cpp
    src/JSystem/JKernel/JKRCompArchive.cpp
    src/JSystem/JKernel/JKRFile.cpp
    src/JSystem/JKernel/JKRDvdFile.cpp
    src/JSystem/JKernel/JKRDvdRipper.cpp
    src/JSystem/JKernel/JKRDvdAramRipper.cpp
    src/JSystem/JKernel/JKRDecomp.cpp
    src/JSystem/JSupport/JSUList.cpp
    src/JSystem/JSupport/JSUInputStream.cpp
    src/JSystem/JSupport/JSUOutputStream.cpp
    src/JSystem/JSupport/JSUMemoryStream.cpp
    src/JSystem/JSupport/JSUFileStream.cpp
    src/JSystem/JGadget/binary.cpp
    src/JSystem/JGadget/linklist.cpp
    src/JSystem/JGadget/std-vector.cpp
    src/JSystem/JUtility/JUTCacheFont.cpp
    src/JSystem/JUtility/JUTResource.cpp
    src/JSystem/JUtility/JUTTexture.cpp
    src/JSystem/JUtility/JUTPalette.cpp
    src/JSystem/JUtility/JUTNameTab.cpp
    src/JSystem/JUtility/JUTGraphFifo.cpp
    src/JSystem/JUtility/JUTFont.cpp
    src/JSystem/JUtility/JUTResFont.cpp
    src/JSystem/JUtility/JUTDbPrint.cpp
    src/JSystem/JUtility/JUTGamePad.cpp
    src/JSystem/JUtility/JUTException.cpp
    src/JSystem/JUtility/JUTDirectPrint.cpp
    src/JSystem/JUtility/JUTAssert.cpp
    src/JSystem/JUtility/JUTVideo.cpp
    src/JSystem/JUtility/JUTXfb.cpp
    src/JSystem/JUtility/JUTFader.cpp
    src/JSystem/JUtility/JUTProcBar.cpp
    src/JSystem/JUtility/JUTConsole.cpp
    src/JSystem/JUtility/JUTDirectFile.cpp
    src/JSystem/JUtility/JUTFontData_Ascfont_fix12.cpp
    src/JSystem/J2DGraph/J2DGrafContext.cpp
    src/JSystem/J2DGraph/J2DOrthoGraph.cpp
    src/JSystem/J2DGraph/J2DTevs.cpp
    src/JSystem/J2DGraph/J2DMaterial.cpp
    src/JSystem/J2DGraph/J2DMatBlock.cpp
    src/JSystem/J2DGraph/J2DMaterialFactory.cpp
    src/JSystem/J2DGraph/J2DPrint.cpp
    src/JSystem/J2DGraph/J2DPane.cpp
    src/JSystem/J2DGraph/J2DScreen.cpp
    src/JSystem/J2DGraph/J2DWindow.cpp
    src/JSystem/J2DGraph/J2DPicture.cpp
    src/JSystem/J2DGraph/J2DTextBox.cpp
    src/JSystem/J2DGraph/J2DWindowEx.cpp
    src/JSystem/J2DGraph/J2DPictureEx.cpp
    src/JSystem/J2DGraph/J2DTextBoxEx.cpp
    src/JSystem/J2DGraph/J2DAnmLoader.cpp
    src/JSystem/J2DGraph/J2DAnimation.cpp
    src/JSystem/J2DGraph/J2DManage.cpp
    src/JSystem/J3DGraphBase/J3DGD.cpp
    src/JSystem/J3DGraphBase/J3DSys.cpp
    src/JSystem/J3DGraphBase/J3DVertex.cpp
    src/JSystem/J3DGraphBase/J3DTransform.cpp
    src/JSystem/J3DGraphBase/J3DTexture.cpp
    src/JSystem/J3DGraphBase/J3DPacket.cpp
    src/JSystem/J3DGraphBase/J3DShapeMtx.cpp
    src/JSystem/J3DGraphBase/J3DShapeDraw.cpp
    src/JSystem/J3DGraphBase/J3DShape.cpp
    src/JSystem/J3DGraphBase/J3DMaterial.cpp
    src/JSystem/J3DGraphBase/J3DMatBlock.cpp
    src/JSystem/J3DGraphBase/J3DTevs.cpp
    src/JSystem/J3DGraphBase/J3DDrawBuffer.cpp
    src/JSystem/J3DGraphBase/J3DStruct.cpp
    src/JSystem/J3DGraphAnimator/J3DShapeTable.cpp
    src/JSystem/J3DGraphAnimator/J3DJointTree.cpp
    src/JSystem/J3DGraphAnimator/J3DModelData.cpp
    src/JSystem/J3DGraphAnimator/J3DMtxBuffer.cpp
    src/JSystem/J3DGraphAnimator/J3DModel.cpp
    src/JSystem/J3DGraphAnimator/J3DAnimation.cpp
    src/JSystem/J3DGraphAnimator/J3DMaterialAnm.cpp
    src/JSystem/J3DGraphAnimator/J3DSkinDeform.cpp
    src/JSystem/J3DGraphAnimator/J3DCluster.cpp
    src/JSystem/J3DGraphAnimator/J3DJoint.cpp
    src/JSystem/J3DGraphAnimator/J3DMaterialAttach.cpp
    src/JSystem/J3DGraphLoader/J3DMaterialFactory.cpp
    src/JSystem/J3DGraphLoader/J3DMaterialFactory_v21.cpp
    src/JSystem/J3DGraphLoader/J3DClusterLoader.cpp
    src/JSystem/J3DGraphLoader/J3DModelLoader.cpp
    src/JSystem/J3DGraphLoader/J3DModelLoaderCalcSize.cpp
    src/JSystem/J3DGraphLoader/J3DJointFactory.cpp
    src/JSystem/J3DGraphLoader/J3DShapeFactory.cpp
    src/JSystem/J3DGraphLoader/J3DAnmLoader.cpp
    src/JSystem/JMath/JMath.cpp
    src/JSystem/JMath/random.cpp
    src/JSystem/JMath/JMATrigonometric.cpp
    )

set(REL_FILES
    src/f_pc/f_pc_profile_lst
    src/d/actor/d_a_andsw
    src/d/actor/d_a_bg
    src/d/actor/d_a_bg_obj
    src/d/actor/d_a_dmidna
    src/d/actor/d_a_door_dbdoor00
    src/d/actor/d_a_door_knob00
    src/d/actor/d_a_door_shutter
    src/d/actor/d_a_door_spiral
    src/d/actor/d_a_dshutter
    src/d/actor/d_a_ep
    src/d/actor/d_a_hitobj
    src/d/actor/d_a_kytag00
    src/d/actor/d_a_kytag04
    src/d/actor/d_a_kytag17
    src/d/actor/d_a_obj_brakeeff
    src/d/actor/d_a_obj_burnbox
    src/d/actor/d_a_obj_carry
    src/d/actor/d_a_obj_ito
    src/d/actor/d_a_obj_movebox
    src/d/actor/d_a_obj_swpush
    src/d/actor/d_a_obj_timer
    src/d/actor/d_a_path_line
    src/d/actor/d_a_scene_exit
    src/d/actor/d_a_set_bgobj
    src/d/actor/d_a_swhit0
    src/d/actor/d_a_tag_allmato
    src/d/actor/d_a_tag_camera
    src/d/actor/d_a_tag_chkpoint
    src/d/actor/d_a_tag_event
    src/d/actor/d_a_tag_evt
    src/d/actor/d_a_tag_evtarea
    src/d/actor/d_a_tag_evtmsg
    src/d/actor/d_a_tag_howl
    src/d/actor/d_a_tag_kmsg
    src/d/actor/d_a_tag_lantern
    src/d/actor/d_a_tag_mist
    src/d/actor/d_a_tag_msg
    src/d/actor/d_a_tag_push
    src/d/actor/d_a_tag_telop
    src/d/actor/d_a_tbox
    src/d/actor/d_a_tbox2
    src/d/actor/d_a_vrbox
    src/d/actor/d_a_vrbox2
    src/d/actor/d_a_arrow
    src/d/actor/d_a_boomerang
    src/d/actor/d_a_crod
    src/d/actor/d_a_demo00
    src/d/actor/d_a_disappear
    src/d/actor/d_a_mg_rod
    src/d/actor/d_a_midna
    src/d/actor/d_a_nbomb
    src/d/actor/d_a_obj_life_container
    src/d/actor/d_a_obj_yousei
    src/d/actor/d_a_spinner
    src/d/actor/d_a_suspend
    src/d/actor/d_a_tag_attention
    src/d/actor/d_a_alldie
    src/d/actor/d_a_andsw2
    src/d/actor/d_a_bd
    src/d/actor/d_a_canoe
    src/d/actor/d_a_cstaF
    src/d/actor/d_a_demo_item
    src/d/actor/d_a_door_bossL1
    src/d/actor/d_a_e_dn
    src/d/actor/d_a_e_fm
    src/d/actor/d_a_e_ga
    src/d/actor/d_a_e_hb
    src/d/actor/d_a_e_nest
    src/d/actor/d_a_e_rd
    src/d/actor/d_a_econt
    src/d/actor/d_a_fr
    src/d/actor/d_a_grass
    src/d/actor/d_a_kytag05
    src/d/actor/d_a_kytag10
    src/d/actor/d_a_kytag11
    src/d/actor/d_a_kytag14
    src/d/actor/d_a_mg_fish
    src/d/actor/d_a_npc_besu
    src/d/actor/d_a_npc_fairy_seirei
    src/d/actor/d_a_npc_fish
    src/d/actor/d_a_npc_henna
    src/d/actor/d_a_npc_kakashi
    src/d/actor/d_a_npc_kkri
    src/d/actor/d_a_npc_kolin
    src/d/actor/d_a_npc_maro
    src/d/actor/d_a_npc_taro
    src/d/actor/d_a_npc_tkj
    src/d/actor/d_a_obj_bhashi
    src/d/actor/d_a_obj_bkdoor
    src/d/actor/d_a_obj_bosswarp
    src/d/actor/d_a_obj_cboard
    src/d/actor/d_a_obj_digplace
    src/d/actor/d_a_obj_eff
    src/d/actor/d_a_obj_fmobj
    src/d/actor/d_a_obj_gpTaru
    src/d/actor/d_a_obj_hhashi
    src/d/actor/d_a_obj_kanban2
    src/d/actor/d_a_obj_kbacket
    src/d/actor/d_a_obj_kgate
    src/d/actor/d_a_obj_klift00
    src/d/actor/d_a_obj_ktOnFire
    src/d/actor/d_a_obj_ladder
    src/d/actor/d_a_obj_lv2Candle
    src/d/actor/d_a_obj_magne_arm
    src/d/actor/d_a_obj_metalbox
    src/d/actor/d_a_obj_mgate
    src/d/actor/d_a_obj_nameplate
    src/d/actor/d_a_obj_ornament_cloth
    src/d/actor/d_a_obj_rope_bridge
    src/d/actor/d_a_obj_sWallShutter
    src/d/actor/d_a_obj_stick
    src/d/actor/d_a_obj_stoneMark
    src/d/actor/d_a_obj_swpropeller
    src/d/actor/d_a_obj_swpush5
    src/d/actor/d_a_obj_yobikusa
    src/d/actor/d_a_scene_exit2
    src/d/actor/d_a_shop_item
    src/d/actor/d_a_sq
    src/d/actor/d_a_swc00
    src/d/actor/d_a_tag_CstaSw
    src/d/actor/d_a_tag_ajnot
    src/d/actor/d_a_tag_attack_item
    src/d/actor/d_a_tag_gstart
    src/d/actor/d_a_tag_hinit
    src/d/actor/d_a_tag_hjump
    src/d/actor/d_a_tag_hstop
    src/d/actor/d_a_tag_lv2prchk
    src/d/actor/d_a_tag_magne
    src/d/actor/d_a_tag_mhint
    src/d/actor/d_a_tag_mstop
    src/d/actor/d_a_tag_spring
    src/d/actor/d_a_tag_statue_evt
    src/d/actor/d_a_ykgr
    src/d/actor/d_a_L7demo_dr
    src/d/actor/d_a_L7low_dr
    src/d/actor/d_a_L7op_demo_dr
    src/d/actor/d_a_b_bh
    src/d/actor/d_a_b_bq
    src/d/actor/d_a_b_dr
    src/d/actor/d_a_b_dre
    src/d/actor/d_a_b_ds
    src/d/actor/d_a_b_gg
    src/d/actor/d_a_b_gm
    src/d/actor/d_a_b_gnd
    src/d/actor/d_a_b_go
    src/d/actor/d_a_b_gos
    src/d/actor/d_a_b_mgn
    src/d/actor/d_a_b_ob
    src/d/actor/d_a_b_oh
    src/d/actor/d_a_b_oh2
    src/d/actor/d_a_b_tn
    src/d/actor/d_a_b_yo
    src/d/actor/d_a_b_yo_ice
    src/d/actor/d_a_b_zant
    src/d/actor/d_a_b_zant_magic
    src/d/actor/d_a_b_zant_mobile
    src/d/actor/d_a_b_zant_sima
    src/d/actor/d_a_balloon_2D
    src/d/actor/d_a_bullet
    src/d/actor/d_a_coach_2D
    src/d/actor/d_a_coach_fire
    src/d/actor/d_a_cow
    src/d/actor/d_a_cstatue
    src/d/actor/d_a_do
    src/d/actor/d_a_door_boss
    src/d/actor/d_a_door_bossL5
    src/d/actor/d_a_door_mbossL1
    src/d/actor/d_a_door_push
    src/d/actor/d_a_e_ai
    src/d/actor/d_a_e_arrow
    src/d/actor/d_a_e_ba
    src/d/actor/d_a_e_bee
    src/d/actor/d_a_e_bg
    src/d/actor/d_a_e_bi
    src/d/actor/d_a_e_bi_leaf
    src/d/actor/d_a_e_bs
    src/d/actor/d_a_e_bu
    src/d/actor/d_a_e_bug
    src/d/actor/d_a_e_cr
    src/d/actor/d_a_e_cr_egg
    src/d/actor/d_a_e_db
    src/d/actor/d_a_e_db_leaf
    src/d/actor/d_a_e_dd
    src/d/actor/d_a_e_df
    src/d/actor/d_a_e_dk
    src/d/actor/d_a_e_dt
    src/d/actor/d_a_e_fb
    src/d/actor/d_a_e_fk
    src/d/actor/d_a_e_fs
    src/d/actor/d_a_e_fz
    src/d/actor/d_a_e_gb
    src/d/actor/d_a_e_ge
    src/d/actor/d_a_e_gi
    src/d/actor/d_a_e_gm
    src/d/actor/d_a_e_gob
    src/d/actor/d_a_e_gs
    src/d/actor/d_a_e_hb_leaf
    src/d/actor/d_a_e_hm
    src/d/actor/d_a_e_hp
    src/d/actor/d_a_e_hz
    src/d/actor/d_a_e_hzelda
    src/d/actor/d_a_e_is
    src/d/actor/d_a_e_kg
    src/d/actor/d_a_e_kk
    src/d/actor/d_a_e_kr
    src/d/actor/d_a_e_mb
    src/d/actor/d_a_e_md
    src/d/actor/d_a_e_mf
    src/d/actor/d_a_e_mk
    src/d/actor/d_a_e_mk_bo
    src/d/actor/d_a_e_mm
    src/d/actor/d_a_e_mm_mt
    src/d/actor/d_a_e_ms
    src/d/actor/d_a_e_nz
    src/d/actor/d_a_e_oc
    src/d/actor/d_a_e_oct_bg
    src/d/actor/d_a_e_ot
    src/d/actor/d_a_e_ph
    src/d/actor/d_a_e_pm
    src/d/actor/d_a_e_po
    src/d/actor/d_a_e_pz
    src/d/actor/d_a_e_rb
    src/d/actor/d_a_e_rdb
    src/d/actor/d_a_e_rdy
    src/d/actor/d_a_e_s1
    src/d/actor/d_a_e_sb
    src/d/actor/d_a_e_sf
    src/d/actor/d_a_e_sg
    src/d/actor/d_a_e_sh
    src/d/actor/d_a_e_sm
    src/d/actor/d_a_e_sm2
    src/d/actor/d_a_e_st
    src/d/actor/d_a_e_st_line
    src/d/actor/d_a_e_sw
    src/d/actor/d_a_e_th
    src/d/actor/d_a_e_th_ball
    src/d/actor/d_a_e_tk
    src/d/actor/d_a_e_tk2
    src/d/actor/d_a_e_tk_ball
    src/d/actor/d_a_e_tt
    src/d/actor/d_a_e_vt
    src/d/actor/d_a_e_warpappear
    src/d/actor/d_a_e_wb
    src/d/actor/d_a_e_ws
    src/d/actor/d_a_e_ww
    src/d/actor/d_a_e_yc
    src/d/actor/d_a_e_yd
    src/d/actor/d_a_e_yd_leaf
    src/d/actor/d_a_e_yg
    src/d/actor/d_a_e_yh
    src/d/actor/d_a_e_yk
    src/d/actor/d_a_e_ym
    src/d/actor/d_a_e_ym_tag
    src/d/actor/d_a_e_ymb
    src/d/actor/d_a_e_yr
    src/d/actor/d_a_e_zh
    src/d/actor/d_a_e_zm
    src/d/actor/d_a_e_zs
    src/d/actor/d_a_formation_mng
    src/d/actor/d_a_guard_mng
    src/d/actor/d_a_horse
    src/d/actor/d_a_hozelda
    src/d/actor/d_a_izumi_gate
    src/d/actor/d_a_kago
    src/d/actor/d_a_kytag01
    src/d/actor/d_a_kytag02
    src/d/actor/d_a_kytag03
    src/d/actor/d_a_kytag06
    src/d/actor/d_a_kytag07
    src/d/actor/d_a_kytag08
    src/d/actor/d_a_kytag09
    src/d/actor/d_a_kytag12
    src/d/actor/d_a_kytag13
    src/d/actor/d_a_kytag15
    src/d/actor/d_a_kytag16
    src/d/actor/d_a_mant
    src/d/actor/d_a_mg_fshop
    src/d/actor/d_a_mirror
    src/d/actor/d_a_movie_player
    src/d/actor/d_a_myna
    src/d/actor/d_a_ni
    src/d/actor/d_a_npc_aru
    src/d/actor/d_a_npc_ash
    src/d/actor/d_a_npc_ashB
    src/d/actor/d_a_npc_bans
    src/d/actor/d_a_npc_blue_ns
    src/d/actor/d_a_npc_bou
    src/d/actor/d_a_npc_bouS
    src/d/actor/d_a_npc_cdn3
    src/d/actor/d_a_npc_chat
    src/d/actor/d_a_npc_chin
    src/d/actor/d_a_npc_clerka
    src/d/actor/d_a_npc_clerkb
    src/d/actor/d_a_npc_clerkt
    src/d/actor/d_a_npc_coach
    src/d/actor/d_a_npc_df
    src/d/actor/d_a_npc_doc
    src/d/actor/d_a_npc_doorboy
    src/d/actor/d_a_npc_drainSol
    src/d/actor/d_a_npc_du
    src/d/actor/d_a_npc_fairy
    src/d/actor/d_a_npc_fguard
    src/d/actor/d_a_npc_gnd
    src/d/actor/d_a_npc_gra
    src/d/actor/d_a_npc_grc
    src/d/actor/d_a_npc_grd
    src/d/actor/d_a_npc_grm
    src/d/actor/d_a_npc_grmc
    src/d/actor/d_a_npc_gro
    src/d/actor/d_a_npc_grr
    src/d/actor/d_a_npc_grs
    src/d/actor/d_a_npc_grz
    src/d/actor/d_a_npc_guard
    src/d/actor/d_a_npc_gwolf
    src/d/actor/d_a_npc_hanjo
    src/d/actor/d_a_npc_henna0
    src/d/actor/d_a_npc_hoz
    src/d/actor/d_a_npc_impal
    src/d/actor/d_a_npc_inko
    src/d/actor/d_a_npc_ins
    src/d/actor/d_a_npc_jagar
    src/d/actor/d_a_npc_kasi_hana
    src/d/actor/d_a_npc_kasi_kyu
    src/d/actor/d_a_npc_kasi_mich
    src/d/actor/d_a_npc_kdk
    src/d/actor/d_a_npc_kn
    src/d/actor/d_a_npc_knj
    src/d/actor/d_a_npc_kolinb
    src/d/actor/d_a_npc_ks
    src/d/actor/d_a_npc_kyury
    src/d/actor/d_a_npc_len
    src/d/actor/d_a_npc_lf
    src/d/actor/d_a_npc_lud
    src/d/actor/d_a_npc_midp
    src/d/actor/d_a_npc_mk
    src/d/actor/d_a_npc_moi
    src/d/actor/d_a_npc_moir
    src/d/actor/d_a_npc_myna2
    src/d/actor/d_a_npc_ne
    src/d/actor/d_a_npc_p2
    src/d/actor/d_a_npc_pachi_besu
    src/d/actor/d_a_npc_pachi_maro
    src/d/actor/d_a_npc_pachi_taro
    src/d/actor/d_a_npc_passer
    src/d/actor/d_a_npc_passer2
    src/d/actor/d_a_npc_post
    src/d/actor/d_a_npc_pouya
    src/d/actor/d_a_npc_prayer
    src/d/actor/d_a_npc_raca
    src/d/actor/d_a_npc_rafrel
    src/d/actor/d_a_npc_saru
    src/d/actor/d_a_npc_seib
    src/d/actor/d_a_npc_seic
    src/d/actor/d_a_npc_seid
    src/d/actor/d_a_npc_seira
    src/d/actor/d_a_npc_seira2
    src/d/actor/d_a_npc_seirei
    src/d/actor/d_a_npc_shad
    src/d/actor/d_a_npc_shaman
    src/d/actor/d_a_npc_shoe
    src/d/actor/d_a_npc_shop0
    src/d/actor/d_a_npc_shop_maro
    src/d/actor/d_a_npc_sola
    src/d/actor/d_a_npc_soldierA
    src/d/actor/d_a_npc_soldierB
    src/d/actor/d_a_npc_sq
    src/d/actor/d_a_npc_the
    src/d/actor/d_a_npc_theB
    src/d/actor/d_a_npc_tk
    src/d/actor/d_a_npc_tkc
    src/d/actor/d_a_npc_tkj2
    src/d/actor/d_a_npc_tks
    src/d/actor/d_a_npc_toby
    src/d/actor/d_a_npc_tr
    src/d/actor/d_a_npc_uri
    src/d/actor/d_a_npc_worm
    src/d/actor/d_a_npc_wrestler
    src/d/actor/d_a_npc_yamid
    src/d/actor/d_a_npc_yamis
    src/d/actor/d_a_npc_yamit
    src/d/actor/d_a_npc_yelia
    src/d/actor/d_a_npc_ykm
    src/d/actor/d_a_npc_ykw
    src/d/actor/d_a_npc_zanb
    src/d/actor/d_a_npc_zant
    src/d/actor/d_a_npc_zelR
    src/d/actor/d_a_npc_zelRo
    src/d/actor/d_a_npc_zelda
    src/d/actor/d_a_npc_zra
    src/d/actor/d_a_npc_zrc
    src/d/actor/d_a_npc_zrz
    src/d/actor/d_a_obj_Lv5Key
    src/d/actor/d_a_obj_Turara
    src/d/actor/d_a_obj_TvCdlst
    src/d/actor/d_a_obj_Y_taihou
    src/d/actor/d_a_obj_amiShutter
    src/d/actor/d_a_obj_ari
    src/d/actor/d_a_obj_automata
    src/d/actor/d_a_obj_avalanche
    src/d/actor/d_a_obj_balloon
    src/d/actor/d_a_obj_barDesk
    src/d/actor/d_a_obj_batta
    src/d/actor/d_a_obj_bbox
    src/d/actor/d_a_obj_bed
    src/d/actor/d_a_obj_bemos
    src/d/actor/d_a_obj_bhbridge
    src/d/actor/d_a_obj_bk_leaf
    src/d/actor/d_a_obj_bky_rock
    src/d/actor/d_a_obj_bmWindow
    src/d/actor/d_a_obj_bmshutter
    src/d/actor/d_a_obj_bombf
    src/d/actor/d_a_obj_boumato
    src/d/actor/d_a_obj_brg
    src/d/actor/d_a_obj_bsGate
    src/d/actor/d_a_obj_bubblePilar
    src/d/actor/d_a_obj_catdoor
    src/d/actor/d_a_obj_cb
    src/d/actor/d_a_obj_cblock
    src/d/actor/d_a_obj_cdoor
    src/d/actor/d_a_obj_chandelier
    src/d/actor/d_a_obj_chest
    src/d/actor/d_a_obj_cho
    src/d/actor/d_a_obj_cowdoor
    src/d/actor/d_a_obj_crope
    src/d/actor/d_a_obj_crvfence
    src/d/actor/d_a_obj_crvgate
    src/d/actor/d_a_obj_crvhahen
    src/d/actor/d_a_obj_crvlh_down
    src/d/actor/d_a_obj_crvlh_up
    src/d/actor/d_a_obj_crvsteel
    src/d/actor/d_a_obj_crystal
    src/d/actor/d_a_obj_cwall
    src/d/actor/d_a_obj_damCps
    src/d/actor/d_a_obj_dan
    src/d/actor/d_a_obj_digholl
    src/d/actor/d_a_obj_digsnow
    src/d/actor/d_a_obj_dmelevator
    src/d/actor/d_a_obj_drop
    src/d/actor/d_a_obj_dust
    src/d/actor/d_a_obj_enemy_create
    src/d/actor/d_a_obj_fallobj
    src/d/actor/d_a_obj_fan
    src/d/actor/d_a_obj_fchain
    src/d/actor/d_a_obj_fireWood
    src/d/actor/d_a_obj_fireWood2
    src/d/actor/d_a_obj_firepillar
    src/d/actor/d_a_obj_firepillar2
    src/d/actor/d_a_obj_flag
    src/d/actor/d_a_obj_flag2
    src/d/actor/d_a_obj_flag3
    src/d/actor/d_a_obj_food
    src/d/actor/d_a_obj_fw
    src/d/actor/d_a_obj_gadget
    src/d/actor/d_a_obj_ganonwall
    src/d/actor/d_a_obj_ganonwall2
    src/d/actor/d_a_obj_gb
    src/d/actor/d_a_obj_geyser
    src/d/actor/d_a_obj_glowSphere
    src/d/actor/d_a_obj_gm
    src/d/actor/d_a_obj_goGate
    src/d/actor/d_a_obj_gomikabe
    src/d/actor/d_a_obj_gra2
    src/d/actor/d_a_obj_graWall
    src/d/actor/d_a_obj_gra_rock
    src/d/actor/d_a_obj_grave_stone
    src/d/actor/d_a_obj_groundwater
    src/d/actor/d_a_obj_grz_rock
    src/d/actor/d_a_obj_h_saku
    src/d/actor/d_a_obj_hakai_brl
    src/d/actor/d_a_obj_hakai_ftr
    src/d/actor/d_a_obj_hasu2
    src/d/actor/d_a_obj_hata
    src/d/actor/d_a_obj_hb
    src/d/actor/d_a_obj_hbombkoya
    src/d/actor/d_a_obj_heavySw
    src/d/actor/d_a_obj_hfuta
    src/d/actor/d_a_obj_hsTarget
    src/d/actor/d_a_obj_ice_l
    src/d/actor/d_a_obj_ice_s
    src/d/actor/d_a_obj_iceblock
    src/d/actor/d_a_obj_iceleaf
    src/d/actor/d_a_obj_ihasi
    src/d/actor/d_a_obj_ikada
    src/d/actor/d_a_obj_inobone
    src/d/actor/d_a_obj_ita
    src/d/actor/d_a_obj_itamato
    src/d/actor/d_a_obj_kabuto
    src/d/actor/d_a_obj_kag
    src/d/actor/d_a_obj_kage
    src/d/actor/d_a_obj_kago
    src/d/actor/d_a_obj_kaisou
    src/d/actor/d_a_obj_kamakiri
    src/d/actor/d_a_obj_kantera
    src/d/actor/d_a_obj_katatsumuri
    src/d/actor/d_a_obj_kazeneko
    src/d/actor/d_a_obj_kbox
    src/d/actor/d_a_obj_key
    src/d/actor/d_a_obj_keyhole
    src/d/actor/d_a_obj_ki
    src/d/actor/d_a_obj_kiPot
    src/d/actor/d_a_obj_kita
    src/d/actor/d_a_obj_kjgjs
    src/d/actor/d_a_obj_kkanban
    src/d/actor/d_a_obj_knBullet
    src/d/actor/d_a_obj_kshutter
    src/d/actor/d_a_obj_kuwagata
    src/d/actor/d_a_obj_kwheel00
    src/d/actor/d_a_obj_kwheel01
    src/d/actor/d_a_obj_kznkarm
    src/d/actor/d_a_obj_laundry
    src/d/actor/d_a_obj_laundry_rope
    src/d/actor/d_a_obj_lbox
    src/d/actor/d_a_obj_lp
    src/d/actor/d_a_obj_lv1Candle00
    src/d/actor/d_a_obj_lv1Candle01
    src/d/actor/d_a_obj_lv3Candle
    src/d/actor/d_a_obj_lv3Water
    src/d/actor/d_a_obj_lv3Water2
    src/d/actor/d_a_obj_lv3WaterB
    src/d/actor/d_a_obj_lv3saka00
    src/d/actor/d_a_obj_lv3waterEff
    src/d/actor/d_a_obj_lv4CandleDemoTag
    src/d/actor/d_a_obj_lv4CandleTag
    src/d/actor/d_a_obj_lv4EdShutter
    src/d/actor/d_a_obj_lv4Gate
    src/d/actor/d_a_obj_lv4HsTarget
    src/d/actor/d_a_obj_lv4PoGate
    src/d/actor/d_a_obj_lv4RailWall
    src/d/actor/d_a_obj_lv4SlideWall
    src/d/actor/d_a_obj_lv4bridge
    src/d/actor/d_a_obj_lv4chandelier
    src/d/actor/d_a_obj_lv4digsand
    src/d/actor/d_a_obj_lv4floor
    src/d/actor/d_a_obj_lv4gear
    src/d/actor/d_a_obj_lv4prelvtr
    src/d/actor/d_a_obj_lv4prwall
    src/d/actor/d_a_obj_lv4sand
    src/d/actor/d_a_obj_lv5FloorBoard
    src/d/actor/d_a_obj_lv5IceWall
    src/d/actor/d_a_obj_lv5SwIce
    src/d/actor/d_a_obj_lv5ychndlr
    src/d/actor/d_a_obj_lv5yiblltray
    src/d/actor/d_a_obj_lv6ChangeGate
    src/d/actor/d_a_obj_lv6FurikoTrap
    src/d/actor/d_a_obj_lv6Lblock
    src/d/actor/d_a_obj_lv6SwGate
    src/d/actor/d_a_obj_lv6SzGate
    src/d/actor/d_a_obj_lv6Tenbin
    src/d/actor/d_a_obj_lv6TogeRoll
    src/d/actor/d_a_obj_lv6TogeTrap
    src/d/actor/d_a_obj_lv6bemos
    src/d/actor/d_a_obj_lv6bemos2
    src/d/actor/d_a_obj_lv6egate
    src/d/actor/d_a_obj_lv6elevta
    src/d/actor/d_a_obj_lv6swturn
    src/d/actor/d_a_obj_lv7BsGate
    src/d/actor/d_a_obj_lv7PropellerY
    src/d/actor/d_a_obj_lv7bridge
    src/d/actor/d_a_obj_lv8KekkaiTrap
    src/d/actor/d_a_obj_lv8Lift
    src/d/actor/d_a_obj_lv8OptiLift
    src/d/actor/d_a_obj_lv8UdFloor
    src/d/actor/d_a_obj_lv9SwShutter
    src/d/actor/d_a_obj_magLift
    src/d/actor/d_a_obj_magLiftRot
    src/d/actor/d_a_obj_maki
    src/d/actor/d_a_obj_master_sword
    src/d/actor/d_a_obj_mato
    src/d/actor/d_a_obj_mhole
    src/d/actor/d_a_obj_mie
    src/d/actor/d_a_obj_mirror_6pole
    src/d/actor/d_a_obj_mirror_chain
    src/d/actor/d_a_obj_mirror_sand
    src/d/actor/d_a_obj_mirror_screw
    src/d/actor/d_a_obj_mirror_table
    src/d/actor/d_a_obj_msima
    src/d/actor/d_a_obj_mvstair
    src/d/actor/d_a_obj_myogan
    src/d/actor/d_a_obj_nagaisu
    src/d/actor/d_a_obj_nan
    src/d/actor/d_a_obj_ndoor
    src/d/actor/d_a_obj_nougu
    src/d/actor/d_a_obj_octhashi
    src/d/actor/d_a_obj_oiltubo
    src/d/actor/d_a_obj_onsen
    src/d/actor/d_a_obj_onsenFire
    src/d/actor/d_a_obj_onsenTaru
    src/d/actor/d_a_obj_pdoor
    src/d/actor/d_a_obj_pdtile
    src/d/actor/d_a_obj_pdwall
    src/d/actor/d_a_obj_picture
    src/d/actor/d_a_obj_pillar
    src/d/actor/d_a_obj_pleaf
    src/d/actor/d_a_obj_poCandle
    src/d/actor/d_a_obj_poFire
    src/d/actor/d_a_obj_poTbox
    src/d/actor/d_a_obj_prop
    src/d/actor/d_a_obj_pumpkin
    src/d/actor/d_a_obj_rcircle
    src/d/actor/d_a_obj_rfHole
    src/d/actor/d_a_obj_rgate
    src/d/actor/d_a_obj_riverrock
    src/d/actor/d_a_obj_rock
    src/d/actor/d_a_obj_rotBridge
    src/d/actor/d_a_obj_rotTrap
    src/d/actor/d_a_obj_roten
    src/d/actor/d_a_obj_rstair
    src/d/actor/d_a_obj_rw
    src/d/actor/d_a_obj_saidan
    src/d/actor/d_a_obj_sakuita
    src/d/actor/d_a_obj_sakuita_rope
    src/d/actor/d_a_obj_scannon
    src/d/actor/d_a_obj_scannon_crs
    src/d/actor/d_a_obj_scannon_ten
    src/d/actor/d_a_obj_sekidoor
    src/d/actor/d_a_obj_sekizo
    src/d/actor/d_a_obj_sekizoa
    src/d/actor/d_a_obj_shield
    src/d/actor/d_a_obj_sm_door
    src/d/actor/d_a_obj_smallkey
    src/d/actor/d_a_obj_smgdoor
    src/d/actor/d_a_obj_smoke
    src/d/actor/d_a_obj_smtile
    src/d/actor/d_a_obj_smw_stone
    src/d/actor/d_a_obj_snowEffTag
    src/d/actor/d_a_obj_snow_soup
    src/d/actor/d_a_obj_so
    src/d/actor/d_a_obj_spinLift
    src/d/actor/d_a_obj_ss_drink
    src/d/actor/d_a_obj_ss_item
    src/d/actor/d_a_obj_stairBlock
    src/d/actor/d_a_obj_stone
    src/d/actor/d_a_obj_stopper
    src/d/actor/d_a_obj_stopper2
    src/d/actor/d_a_obj_suisya
    src/d/actor/d_a_obj_sw
    src/d/actor/d_a_obj_swBallA
    src/d/actor/d_a_obj_swBallB
    src/d/actor/d_a_obj_swBallC
    src/d/actor/d_a_obj_swLight
    src/d/actor/d_a_obj_swchain
    src/d/actor/d_a_obj_swhang
    src/d/actor/d_a_obj_sword
    src/d/actor/d_a_obj_swpush2
    src/d/actor/d_a_obj_swspinner
    src/d/actor/d_a_obj_swturn
    src/d/actor/d_a_obj_syRock
    src/d/actor/d_a_obj_szbridge
    src/d/actor/d_a_obj_taFence
    src/d/actor/d_a_obj_table
    src/d/actor/d_a_obj_takaraDai
    src/d/actor/d_a_obj_tatigi
    src/d/actor/d_a_obj_ten
    src/d/actor/d_a_obj_testcube
    src/d/actor/d_a_obj_tgake
    src/d/actor/d_a_obj_thashi
    src/d/actor/d_a_obj_thdoor
    src/d/actor/d_a_obj_timeFire
    src/d/actor/d_a_obj_tks
    src/d/actor/d_a_obj_tmoon
    src/d/actor/d_a_obj_toaru_maki
    src/d/actor/d_a_obj_toby
    src/d/actor/d_a_obj_tobyhouse
    src/d/actor/d_a_obj_togeTrap
    src/d/actor/d_a_obj_tombo
    src/d/actor/d_a_obj_tornado
    src/d/actor/d_a_obj_tornado2
    src/d/actor/d_a_obj_tp
    src/d/actor/d_a_obj_treesh
    src/d/actor/d_a_obj_twGate
    src/d/actor/d_a_obj_udoor
    src/d/actor/d_a_obj_usaku
    src/d/actor/d_a_obj_vground
    src/d/actor/d_a_obj_volcball
    src/d/actor/d_a_obj_volcbom
    src/d/actor/d_a_obj_warp_kbrg
    src/d/actor/d_a_obj_warp_obrg
    src/d/actor/d_a_obj_waterGate
    src/d/actor/d_a_obj_waterPillar
    src/d/actor/d_a_obj_waterfall
    src/d/actor/d_a_obj_wchain
    src/d/actor/d_a_obj_wdStick
    src/d/actor/d_a_obj_web0
    src/d/actor/d_a_obj_web1
    src/d/actor/d_a_obj_well_cover
    src/d/actor/d_a_obj_wflag
    src/d/actor/d_a_obj_wind_stone
    src/d/actor/d_a_obj_window
    src/d/actor/d_a_obj_wood_pendulum
    src/d/actor/d_a_obj_wood_statue
    src/d/actor/d_a_obj_wsword
    src/d/actor/d_a_obj_yel_bag
    src/d/actor/d_a_obj_ystone
    src/d/actor/d_a_obj_zcloth
    src/d/actor/d_a_obj_zdoor
    src/d/actor/d_a_obj_zrTurara
    src/d/actor/d_a_obj_zrTuraraRock
    src/d/actor/d_a_obj_zraMark
    src/d/actor/d_a_obj_zra_freeze
    src/d/actor/d_a_obj_zra_rock
    src/d/actor/d_a_passer_mng
    src/d/actor/d_a_tag_arena
    src/d/actor/d_a_peru
    src/d/actor/d_a_ppolamp
    src/d/actor/d_a_skip_2D
    src/d/actor/d_a_startAndGoal
    src/d/actor/d_a_swBall
    src/d/actor/d_a_swLBall
    src/d/actor/d_a_swTime
    src/d/actor/d_a_tag_Lv6Gate
    src/d/actor/d_a_tag_Lv7Gate
    src/d/actor/d_a_tag_Lv8Gate
    src/d/actor/d_a_tag_TWgate
    src/d/actor/d_a_tag_lv6CstaSw
    src/d/actor/d_a_tag_assistance
    src/d/actor/d_a_tag_bottle_item
    src/d/actor/d_a_tag_chgrestart
    src/d/actor/d_a_tag_csw
    src/d/actor/d_a_tag_escape
    src/d/actor/d_a_tag_firewall
    src/d/actor/d_a_tag_gra
    src/d/actor/d_a_tag_guard
    src/d/actor/d_a_tag_instruction
    src/d/actor/d_a_tag_kago_fall
    src/d/actor/d_a_tag_lightball
    src/d/actor/d_a_tag_lv5soup
    src/d/actor/d_a_tag_mmsg
    src/d/actor/d_a_tag_mwait
    src/d/actor/d_a_tag_myna2
    src/d/actor/d_a_tag_myna_light
    src/d/actor/d_a_tag_pachi
    src/d/actor/d_a_tag_poFire
    src/d/actor/d_a_tag_qs
    src/d/actor/d_a_tag_ret_room
    src/d/actor/d_a_tag_river_back
    src/d/actor/d_a_tag_rmbit_sw
    src/d/actor/d_a_tag_schedule
    src/d/actor/d_a_tag_setBall
    src/d/actor/d_a_tag_setrestart
    src/d/actor/d_a_tag_shop_camera
    src/d/actor/d_a_tag_shop_item
    src/d/actor/d_a_tag_smk_emt
    src/d/actor/d_a_tag_spinner
    src/d/actor/d_a_tag_sppath
    src/d/actor/d_a_tag_ss_drink
    src/d/actor/d_a_tag_stream
    src/d/actor/d_a_tag_theB_hint
    src/d/actor/d_a_tag_wara_howl
    src/d/actor/d_a_tag_watchge
    src/d/actor/d_a_tag_waterfall
    src/d/actor/d_a_tag_wljump
    src/d/actor/d_a_tag_yami
    src/d/actor/d_a_talk
    src/d/actor/d_a_tboxSw
    src/d/actor/d_a_title
    src/d/actor/d_a_warp_bug
    )

source_group("dolzel" FILES ${DOLZEL_FILES} ${Z2AUDIOLIB_FILES} ${SSYSTEM_FILES} ${JSYSTEM_FILES} ${REL_FILES})

add_executable(dusk ${DOLZEL_FILES} ${Z2AUDIOLIB_FILES} ${SSYSTEM_FILES} ${JSYSTEM_FILES} ${REL_FILES})
target_compile_definitions(dusk PRIVATE TARGET_PC VERSION=0)
target_include_directories(dusk PRIVATE include)
target_link_libraries(dusk PRIVATE aurora::main aurora::core aurora::gx aurora::si aurora::vi aurora::pad)
